--- a/Dotifier/styles.css
+++ b/Dotifier/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500');
+
 body {
     margin: 0;
     background-color: rgb(20, 20, 20);
-    font-family: Arial, monospace;
+    font-family: Quicksand, Arial, monospace;
+    font-weight: 400;
     color: rgb(200, 200, 200);
 }
 
@@ -24,6 +27,8 @@ body {
     transform-origin: 50% 135%;
     opacity: 0;
     text-align: center;
+    box-sizing: border-box;
+    padding: .5rem;
     overflow-y: auto;
     /* Goddamn iOS */
     -webkit-overflow-scrolling: touch;
@@ -31,15 +36,17 @@ body {
 
 h1 {
     margin: 0;
-    font-size: 3rem;
+    font-size: 2.25rem;
+    font-weight: 500;
 }
 p {
     margin: 0;
-    font-size: 2rem;
+    font-size: 1.25rem;
+    font-weight: 400;
 }
 label, .switch-label {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 .spacer2 {
     height: 2vh;
@@ -59,12 +66,12 @@ input[type="checkbox"] {
 }
 .input-file, .button {
     display: inline-block;
-    padding: 2rem 3rem;
+    padding: .5rem 2rem;
     background-color: rgb(30, 30, 30);
-    font-size: 2rem;
+    font-size: 1.5rem;
     transition-duration: .15s;
     border-radius: .5rem;
-    box-shadow: inset 0 0 0 .5rem transparent;
+    box-shadow: inset 0 0 0 .25rem rgb(25, 25, 25);
     user-select: none;
     -webkit-user-select: none;
 }
@@ -72,11 +79,10 @@ input[type="checkbox"] {
     display: inline-block;
 }
 .input-file:hover, .button:hover {
-    background-color: transparent;
-    box-shadow: inset 0 0 0 .5rem rgb(30, 30, 30);
+    box-shadow: inset 0 0 0 .25rem rgb(40, 40, 40);
 }
 .input-file:active, .button:active {
-    box-shadow: inset 0 0 1rem .5rem rgb(30, 30, 30);
+    box-shadow: inset 0 0 0 .25rem rgb(30, 30, 30);
 }
 textarea {
     font-family: monospace;
@@ -86,7 +92,7 @@ textarea {
     border-radius: .5rem;
     padding: .25rem;
     resize: none;
-    max-width: Calc(100% - .5rem);
+    max-width: Calc(90% - .5rem);
     max-height: 70vh;
     white-space: pre;
     box-shadow: 0 0 0 .25rem rgb(25, 25, 25);
@@ -102,11 +108,11 @@ textarea:hover {
     position: relative;
     display: inline-block;
     background-color: rgb(30, 30, 30);
-    width: 5rem;
-    height: 2.5rem;
+    width: 3rem;
+    height: 1.5rem;
     padding: .25rem;
     box-shadow: 0 0 0 .25rem rgb(25, 25, 25);
-    border-radius: 1.25rem;
+    border-radius: .75rem;
     transition-duration: .15s;
     transition-timing-function: cubic-bezier(.25, 0, .5, 1);
     user-select: none;
@@ -114,22 +120,24 @@ textarea:hover {
 
     vertical-align: middle;
 }
-.switch[checked="true"] {
-    background-color: rgb(30, 35, 30);
-}
-.switch[checked="true"]:hover {
-    background-color: rgb(30, 45, 30);
-}
 .switch:hover {
     box-shadow: 0 0 0 .25rem rgb(40, 40, 40);
 }
+.switch[checked="true"] {
+    background-color: rgb(30, 70, 30);
+    box-shadow: 0 0 0 .25rem rgb(35, 35, 35);
+}
+.switch[checked="true"]:hover {
+    background-color: rgb(30, 75, 30);
+    box-shadow: 0 0 0 .25rem rgb(50, 50, 50);
+}
 .switch-button {
     position: absolute;
-    background-color: rgb(50, 50, 50);
-    right: 2.75rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 1rem;
+    background-color: rgb(80, 80, 80);
+    right: 1.75rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: .5rem;
     transition-duration: .15s;
     transition-timing-function: cubic-bezier(.25, 0, .5, 1);
 }
@@ -137,7 +145,7 @@ textarea:hover {
     right: .25rem;
 }
 .switch:hover .switch-button {
-    background-color: rgb(60, 60, 60);
+    background-color: rgb(90, 90, 90);
 }
 .switch-label {
     margin-left: .5rem;
